video overshadows the comment box,like,username, song so we provide z-index to them for preventing bobbling

--- a/Module3/reels/src/Components/videoCard.css
+++ b/Module3/reels/src/Components/videoCard.css
@@ -11,6 +11,8 @@
      height: 100%;
      width: 100%;
      object-fit: cover; /*video ko puri screen par*/
+     position: absolute;
+     z-index: 1; /* boobling na ho isliye , kuki ye sabko overshadow kar rha the */
 }
 .video-card-username{
      color: white;
@@ -18,6 +20,7 @@
     position: absolute;
     bottom: 10rem;
     left: 20px;
+    z-index: 2;
 }
 
 .video-card-music{
@@ -27,6 +30,7 @@
     position: absolute;
     bottom: 9rem;
     left: 12px;
+    z-index: 2;
 }
 
 .video-card-comment{
@@ -35,6 +39,7 @@
     position: absolute;
     bottom: 14rem;
     right: 13px;
+    z-index: 2;
 }
 
 .video-card-like{
@@ -43,4 +48,5 @@
      bottom: 11rem;
      right: 12px;
      font-size: 2rem;
+     z-index: 2;
 }
